--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "dotenv": "^16.4.5"
   }
 }
